# GNR

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
Apps/: CMakeLists.txt
Apps/GNREditor/: .gitignore  CMakeLists.txt  main.cpp
Apps/GNREditor/Shaders/: Box2.fs.hlsl  Box3.fs.hlsl  Box7.fs.hlsl  ForwardBindless.fs.hlsl  ForwardBindless.vs.hlsl  ForwardDiscard.fs.hlsl  ForwardTransparent.fs.hlsl  RayTracingBox.rchit.hlsl  RayTracingBox.rgen.hlsl  SceneViewerBindlessStructs.h  Triangle.vs.hlsl
Apps/GNREditor/_Data/Scenes/Cubes/: Cubes.gltf  T_Brick_Cinder_D.dds  T_Brick_Yellow_D.dds  T_Tile_White_D.dds
Apps/GNREditor/_Data/Scenes/ShaderBalls/: ShaderBalls.gltf  T_Brick_Beige_D.dds  T_Brick_Concrete_D.dds  T_Concrete_Shimizu_D.dds
Apps/GNREditor/_Data/Textures/: checkerboard0.dds  checkerboard1.dds  checkerboard2.dds  checkerboard3.dds  checkerboard4.dds  checkerboard5.dds  checkerboard6.dds  checkerboard7.dds
Shaders/: Box.vs.hlsl  Box0.fs.hlsl  Box1.fs.hlsl  Box4.fs.hlsl  Box5.fs.hlsl  Box6.fs.hlsl  Compute.cs.hlsl  Forward.fs.hlsl  Forward.vs.hlsl  ForwardResources.hlsli  GenerateSceneDrawCalls.cs.hlsl  RayTracingTriangle.rgen.hlsl  Simple.vs.hlsl  Surface.cs.hlsl  Triangle.fs.hlsl  TriangleFlexibleMultiview.vs.hlsl
